<resources>
    <string name="app_name">Vegan Bingo</string>
    <string name="title_activity_show_screen">Vegan Bingo</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_about_screen">About</string>
    <string name="about_content"><![CDATA[<p>This was developed for the love of it by Cameron Green</p>
        <p>Check out my web page at:<br />
        http://camerongreen.org<br />
        for contact details or to read my philosophies.
        </p>
        <p>Inspired by the original Rationalization Bingo in Vegnews.</p>
        <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/3.0/.</p>]]></string>
    <string name="howto_play">How to play</string>
    <string name="title_activity_show_howto_screen">How to play</string>
    <string name="howto_content"><![CDATA[<p>If you know how traditional Bingo works, you are well on the way to understanding <b>Vegan Bingo</a>!  If you don\'t, well worry not, it is simple.</p>
        <p>You start with a board of icons, each one representing common things people say to vegans.</p>
        <p>Tap/click each of the icons to see what they represent and some more info.</p>
        <p>When someone says one of them to you, you then say Vegan Bingo! and you go and check it off. A red <b>X</b> will now appear on the screen for that item showing it as checked off.</p>
        <p>Your aim is to check as many off as possible; once you have done them all you will have achieved Vegan Bingo!</p> 
        <p>Vegan bingo is a fun game for vegans, not to make fun of non-vegans; remember veganism was new to most of us at one point and we might have asked similar questions.</p>]]></string>
    <string name="restart">Restart</string>
    <string name="restart_text"><![CDATA[<p>Please note this will clear all values and start again.
        <p>Are you sure?]]></string>
    <string name="timer_text">Time</string>
    <string name="started_text">Started</string>
    <string name="finished_text">Completed</string>
    <string name="not_started_text">N/A</string>
    <string name="score_text">Score</string>
    <string name="screen_heading">Choice icon</string>
    <string name="rules_heading">Also acceptable:</string>
    <string name="info_heading">More information:</string>
    <string name="done_button_check">Complete this!</string>
    <string name="done_button_uncheck">Revert to incomplete</string>
    <string name="bacon_description">Just saying Bacon etc.</string>
    <string name="bacon_rules">Steak, chicken, any single word comment involving the flesh of our non human family.</string>
    <string name="bacon_main"><![CDATA[<p>This can occur in any number of situations, on a web social thread, in a conversation about food, over dinner etc.</p>
        <p>Often not a lot of thought goes into humour at the expense of animals, so we cannot get too carried away with analysing, but&#8230;</p>
        <p>In Internet terms this could be called a Troll, someone deliberately saying some offensive because they think they are being clever, despite the fact it has little more intelligence or humour in it other than being offensive.</p>
        <p>In deeper terms this could be called a cold joke, trying to paint something as humourous to themselves in order to avoid dealing with the psychological ramifications of the immoral action they are knowingly participating in.</p>
        <p>Bacon, steak, chicken, they are all animals killed for people, the least people who eat them can do is have some respect for them.</p>]]></string>
    <string name="hitler_description">Hitler was a vegetarian</string>
    <string name="hitler_rules">Pol Pot, Charles Manson, anyone who reflects poorly on our species</string>
    <string name="hitler_main"><![CDATA[<p>Evil people who might have eaten vegetables at one point in their lives are often trudged out as examples of&#8230;well it is hard to say. What it is probably about is the person trying to maintain their own sense of self esteem by slanderously associating anyone who may be making a moral choice with evil people from history.</p>
        <p>They probably know they are participating in something immoral, and rather than taking any action to be a better person, are using whatever they can grab on to to drag other people down.\nHitler, Pol Pot, neither were ethical vegetarians, they did so for short periods due to health problems and Hitler certainly would rather be eating his favourite sausages.</p>
        <p>The Nazis did enact some laws against animal cruelty, they also had the Winter Relief programme helping the poor during the cold months, so they were evil but not every single thing they did necessarily was.</p>
        <p>Ultimately veganism is about compassion for animals; humans are animals so we care about them too.</p>]]></string>
    <string name="protein_description">Where do you get your protein?</string>
    <string name="protein_rules">Iron, B12 is not, because it is a good question&#8230;you should be taking care to get enough in your diet, and a B12 supplement is essential!</string>
    <string name="protein_main"><![CDATA[<p>Where did people get their obsession with asking about protein? Probably meat and dairy industry propaganda which reaches far more people than any unbiased nutritional advice.</p>
        <p>There has never been any study which has shown protein deficiency in people following a plant based diet.  Protein deficiency is unknown in any population who eats enough calories, period.</p>
        <p>Of course they also rarely know how much protein they need themselves so let\'s help them out. Your weight in kilograms times 0.8 to 1.8 depending on how much weight bearing or endurance exercise you do.</p>]]></string>
    <string name="cheese_description">I could never give up cheese</string>
    <string name="cheese_rules">You are not going to need any other answers because you will be hearing this one repeatedly.</string>
    <string name="cheese_main"><![CDATA[<p>Of course the second part of the statement I could neve give up cheese should be - No matter how much cruelty is involved.</p>
        <p>Hopefully this is simply untrue though, that instead people can be motivated by rational and ethical concerns.  If people understood that it wasn\'t a particularly healthy thing to eat, contributes to the veal trade in young calves, is environmentally polluting and unhealthy for the cows themselves, hopefully they could find the motivation to replace just one of the hundreds or thousands of ingredients in their diet.</p>
        <p>There are mock cheeses, personally I don\'t think they are the best of our vegan substitutes, but others like them.  In the end I relate a quote from someone who said, I couldn\'t give up cheese, but I could give up cruelty.</p>]]></string>
    <string name="cow_description">What would happen to all the cows?</string>
    <string name="cow_rules">Cows like to be milked! It shows a similar complete misunderstanding of how dairy cows are bred and for what purpose.</string>
    <string name="cow_main"><![CDATA[<p>Cows are not allowed to breed naturally, the idea that they are has more to do with romantic visions of the countryside and how they might once have lived in nature than intensive industrial farming.</p>
        <p>Their breeding is strictly controlled by the farmers and companies engineering their bodies for human purposes, such as growing oversized udders which impair their mobility. The population of livestock rises and falls quickly in relation to human demand.  Veal calves for instance are mainly the byproduct of cows artificially inseminated to keep their milk production high.</p>
        <p>Sadly for livestock it is unlikely that a change to a vegan world will happen overnight, it will probably be gradual so carnists can stop losing sleep over the terrible notion of these creatures we brought into being living out their natural lifespans and just go vegan.</p>]]></string>
    <string name="plants_description">Don\'t plants have feelings?</string>
    <string name="plants_rules">Carrots scream when you cut them!</string>
    <string name="plants_main"><![CDATA[<p>Sadly people who ask this are likely to care even less about plants than they do non human animals.</p>
        <p>There is a serious point here, something which would generally elude anyone silly enough to phrase the question this way, and that is where do we draw the line of compassion towards other life.</p>
        <p>Darwin and the best biologists since him time have understood that our common evolutionary heritage expresses itself in us sharing much of our sentience with other beings.  In understanding how we should treat other beings ethically we should discuss levels of self awareness, the ability to suffer, the presence of a central nervous system, in all of which science should be our guide.</p>
        <p>Science is conforming to the evidence of our experiences, that we know from many of the non human animals we share our lives with that they have personalities, feelings, hopes etc.  We should draw a line based on our ever advancing knowledge, not just at human and non human and if we err in that endeavour, let it be on the side of compassion.</p>]]></string>
    <string name="teeth_description">What about our canine teeth?</string>
    <string name="teeth_rules">Meat eating caused human brains to grow</string>
    <string name="teeth_main"><![CDATA[<p>Human canine teeth look rather lame compared with the ones sported by our cousins the gorillas, who are either wholly vegan or some eat small insects.  Indeed all primates have canine teeth, primarily used for dominance displays and as weapons.</p>
        <p>It is unfortunate that the name canine has caused so much confusion, however the presence of them provides no justification for cruelty, in either using them to tear the flesh either of innocent animals or rivals from our own species.</p>
        <p>As for meat eating helping our evolution, well it is another source of food so it may have helped in that respect, but the evidence is that it was cooking and the extra starches available in our diet that probably fuelled our brain development, though the jury is still out.</p>
        <p>Ultimately, it is our conscience not our biology that should be guiding our actions.</p>]]></string>
    <string name="humane_description">What if we raised animals more humanely?</string>
    <string name="humane_rules">What if the chickens were raised in your backyard</string>
    <string name="humane_main"><![CDATA[<p>A lot of people talk about humane farming, but for all the talk few people are rigorous about doing it or supporting it with their money.</p>
        <p>Some people do try to buy some more humane animal products at home, but care little once they leave the house.  Also the pure economics of the livestock industries mean inhumanity is inevitable.  Evidence of this is how some countries have taken the enlightened step to ban caged hens however this has been followed quickly by a loosening of cruelty standards on free range to keep the industry profitable.</p>
        <p>To feed billions of people animal products at every meal, is always going to take an industrial system, a long way removed from the image of the country farm many people have in their minds.</p>
        <p>People want cheap food and when animals are involved that isn\'t going to be humane, and if you want to be eating poor chickens as regularly as most people do in this society, a couple of chickens in the backyard being enough is just a deluded fantasy.</p>]]></string>
    <string name="food_description">Why do vegans eat things resembling animal products?</string>
</resources>